@@ -79,6 +79,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -92,6 +93,7 @@ import org.mockito.Mock;
 import org.mockito.Spy;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.mongodb.core.query.Criteria;
+import org.springframework.data.util.CloseableIterator;
 import org.springframework.transaction.support.TransactionTemplate;
 
 @OwnedBy(PL)
@@ -173,6 +175,7 @@ public class NgUserServiceImplTest extends CategoryTest {
     final ArgumentCaptor<Criteria> userMetadataCriteriaArgumentCaptor = ArgumentCaptor.forClass(Criteria.class);
     when(userMembershipRepository.findAllUserIds(any(), any())).thenReturn(PageTestUtils.getPage(userIds, 1));
     when(userMetadataRepository.findAll(any(), any())).thenReturn(PageTestUtils.getPage(userMetadata, 1));
+    when(userMetadataRepository.findAllIds(any())).thenReturn(List.of("ug3"));
 
     UserFilter userFilter = UserFilter.builder()
                                 .emails(Sets.newHashSet("ug3@harness.io"))
@@ -181,7 +184,8 @@ public class NgUserServiceImplTest extends CategoryTest {
     ngUserService.listUsers(scope, pageRequest, userFilter);
 
     verify(userMembershipRepository, times(1)).findAllUserIds(userMembershipCriteriaArgumentCaptor.capture(), any());
-    verify(userMetadataRepository, times(2)).findAll(userMetadataCriteriaArgumentCaptor.capture(), any());
+    verify(userMetadataRepository, times(1)).findAll(userMetadataCriteriaArgumentCaptor.capture(), any());
+    verify(userMetadataRepository, times(1)).findAllIds(userMetadataCriteriaArgumentCaptor.capture());
 
     Criteria userMembershipCriteria = userMembershipCriteriaArgumentCaptor.getValue();
     assertNotNull(userMembershipCriteria);
@@ -286,13 +290,15 @@ public class NgUserServiceImplTest extends CategoryTest {
 
   private void preLastAdminFailure(String userId, Scope scope, UserMembership userMembership) {
     when(userMembershipRepository.findOne(any())).thenReturn(userMembership);
-    when(userMembershipRepository.findAll(any(Criteria.class))).thenReturn(Collections.singletonList(userMembership));
+    when(userMembershipRepository.stream(any(Criteria.class)))
+        .thenReturn(createCloseableIterator(List.of(userMembership).iterator()));
     when(lastAdminCheckService.doesAdminExistAfterRemoval(any(), any())).thenReturn(false);
   }
 
   private void assertSuccessfulRemoveUserFromScope(String userId, Scope scope, UserMembership userMembership) {
     when(userMembershipRepository.findOne(any())).thenReturn(userMembership);
-    when(userMembershipRepository.findAll(any(Criteria.class))).thenReturn(Collections.singletonList(userMembership));
+    when(userMembershipRepository.stream(any(Criteria.class)))
+        .thenReturn(createCloseableIterator(List.of(userMembership).iterator()));
     when(lastAdminCheckService.doesAdminExistAfterRemoval(any(), any())).thenReturn(true);
     when(userMetadataRepository.findDistinctByUserId(userId))
         .thenReturn(Optional.of(UserMetadata.builder().userId(userId).build()));
@@ -557,5 +563,22 @@ public class NgUserServiceImplTest extends CategoryTest {
     preAddUserToScope(userId, scope, new ArrayList<>(), new ArrayList<>());
     ngUserService.addUserToScope(userId, scope, null, null, UserMembershipUpdateSource.USER);
     assertAddUserToScope(scope, singletonList(userId), null);
+  }
+
+  private static <T> CloseableIterator<T> createCloseableIterator(Iterator<T> iterator) {
+    return new CloseableIterator<T>() {
+      @Override
+      public void close() {}
+
+      @Override
+      public boolean hasNext() {
+        return iterator.hasNext();
+      }
+
+      @Override
+      public T next() {
+        return iterator.next();
+      }
+    };
   }
 }
